syntax = "proto3";

package indexed_management;
option go_package = "gitlab.com/pietroski-software-company/lightning-db/lightning-node/go-lightning-node/schemas/generated/go/management/indexed/indexed_management;grpc_indexed_mngmt";

import "management/indexed/indexed_management_messages.proto";
import "management/management_messages.proto";

service IndexedManagement {
  rpc CreateIndexedStore(CreateIndexedStoreRequest)
      returns(management.CreateStoreResponse);
  rpc UpdateIndexedStore(UpdateIndexedStoreRequest)
      returns(management.UpdateStoreResponse);
  rpc GetIndexedStore(GetIndexedStoreRequest)
      returns(management.GetStoreResponse);
  rpc DeleteIndexedStore(DeleteIndexedStoreRequest)
      returns(management.DeleteStoreResponse);
  rpc ListIndexedStores(ListIndexedStoresRequest)
      returns(management.ListStoresResponse);

  rpc RestartLightningNode(management.RestartLightningNodeRequest)
      returns(management.RestartLightningNodeResponse);
  rpc ShutdownLightningNode(management.ShutdownLightningNodeRequest)
      returns(management.ShutdownLightningNodeResponse);
}
